<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Consortium Companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="player_count">Num players:</string>
    <string name="sides_used">Sides:</string>
    <string name="include_mancers">Include Mancer\'s Expansion</string>
    <string name="include_plus_mage">Include Gain a Mage Tile</string>
    <string name="include_resources">Include Gain Mana, Gold, and IP Tiles</string>
    <string name="include_archmage">Include Archmage\'s Staff and Voter</string>
    <string name="include_scenario">Include Scenario</string>
    <string name="include_white">Include Neutral Candidate</string>
    <string name="submit">Go!</string>
    <string name="pick_voters">To the Game!</string>
    <string name="ip_up">IP Up</string>
    <string name="ip_down">IP Down</string>
    <string name="voter_one">Hidden Voter 1</string>
    <string name="voter_two">Hidden Voter 2</string>
    <string name="voter_three">Hidden Voter 3</string>
    <string name="voter_four">Hidden Voter 4</string>
    <string name="voter_five">Hidden Voter 5</string>
    <string name="voter_six">Hidden Voter 6</string>
    <string name="voter_seven">Hidden Voter 7</string>
    <string name="voter_eight">Hidden Voter 8</string>
    <string name="voter_nine">Hidden Voter 9</string>
    <string name="voter_ten">Hidden Voter 10</string>
    <string name="reveal_voters">Reveal Voters</string>

    <string-array name="player_possibilities">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="side_possibilities">
        <item>All A</item>
        <item>All B</item>
        <item>Mix</item>
    </string-array>

    <string name="title_activity_display_game">DisplayGameActivity</string>
    <string name="title_activity_consortium_board">ConsortiumBoard</string>
    <string name="title_activity_settings">Settings</string>


</resources>
